# docs/swagger.json
@@ -128,7 +128,7 @@
             }
         },
         "/cluster/v1/node": {
-            "post": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -138,13 +138,11 @@
                 "summary": "获取节点信息",
                 "parameters": [
                     {
+                        "type": "string",
                         "description": "节点名",
-                        "name": "params",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/cluster.NodeRequest"
-                        }
+                        "name": "name",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -233,6 +231,53 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/cluster.PodInfoResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/cluster/v1/podLog": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "获取pod日志",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "命名空间名 名字",
+                        "name": "namespace",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Pod名字",
+                        "name": "podName",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"errno\":0,\"errmsg\":\"\",\"data\":{},\"extr\":{\"inner_error\":\"\",\"error_stack\":\"\"}}",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/protocol.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/cluster.PodLogResponse"
                                         }
                                     }
                                 }
@@ -567,15 +612,6 @@
                 }
             }
         },
-        "cluster.NodeRequest": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "description": "@description 节点名",
-                    "type": "string"
-                }
-            }
-        },
         "cluster.NodeResponse": {
             "type": "object",
             "properties": {
@@ -592,7 +628,7 @@
         "cluster.PodInfoRequest": {
             "type": "object",
             "properties": {
-                "namespace": {
+                "nameSpace": {
                     "description": "@description 命名空间",
                     "type": "string"
                 },
@@ -613,6 +649,15 @@
                     "description": "@description pod信息",
                     "type": "object",
                     "$ref": "#/definitions/model.PodDetail"
+                }
+            }
+        },
+        "cluster.PodLogResponse": {
+            "type": "object",
+            "properties": {
+                "log": {
+                    "description": "@description pod日志",
+                    "type": "string"
                 }
             }
         },
@@ -912,6 +957,27 @@
                 }
             }
         },
+        "model.EventData": {
+            "type": "object",
+            "properties": {
+                "eventTime": {
+                    "description": "@description 事件时间",
+                    "type": "string"
+                },
+                "host": {
+                    "description": "@description 主机Ip",
+                    "type": "string"
+                },
+                "messages": {
+                    "description": "@description 信息",
+                    "type": "string"
+                },
+                "reason": {
+                    "description": "@description 原因",
+                    "type": "string"
+                }
+            }
+        },
         "model.NamespaceDetail": {
             "type": "object",
             "properties": {
@@ -1066,6 +1132,12 @@
                 "createTime": {
                     "description": "@description 创建时间",
                     "type": "string"
+                },
+                "eventData": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.EventData"
+                    }
                 },
                 "hostIp": {
                     "description": "@description 宿主机地址",
